--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 @font-face {
     font-family:'android' ;
-    src: url('pacote-projeto-d010/fontes/idroid.otf') format(opentype);
+    src: url('/fontes/idroid.otf') format(opentype);
     font-size: normal;
     font-weight: normal;
 }
@@ -61,6 +61,7 @@ p {
 }
 
 a {
+    color: green;
     text-decoration: none;
 }
 
