--- a/style.css
+++ b/style.css
@@ -25,12 +25,14 @@ nav > a:hover {
 }
 
 body {
-    margin: 0;
+    margin: auto;
     background-color: rgb(0, 255, 170);
     
 }
 
 main {
+    min-width: 320px;
+    max-width: 800px;
     background-color: white;
     border: 1px  solid rgba(0, 0, 0, 0.37);
     width: 75%;
@@ -66,9 +68,9 @@ a {
 }
 
 img {
-    max-width: 300px;
+    width: 100%;
     display: block;
-    margin: 0 auto;
+    margin: auto;
 }
 
 iframe {
