--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     font-family:'android' ;
     src: url('/fontes/idroid.otf') format(opentype);
     font-size: normal;
-    font-weight: normal;
+    font-weight: bold;
 }
 
 header {
