--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 @font-face {
     font-family:'Android' ;
-    src: url('/fontes/idroid.otf') format(opentype);
+    src: url('/fontes/idroid.of') format(opentype);
     font-size: normal;
     font-weight: bold;
 }
@@ -43,7 +43,7 @@ main {
     box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.5);
 }
 h1,h2 {
-    font-family: 'Android';
+    font-family: 'Arial';
     font-size: normal;
     font-weight: bold;
 }
