--- a/style.css
+++ b/style.css
@@ -1,10 +1,7 @@
 @charset "UTF-8";
 @font-face {
-    font-family:'Android';
-    src: url('/fontes/idroid.otf') format(opentype);
-    font-size: normal;
-    font-weight: bold;
-
+    font-family: "Android";
+    src: url(fontes/idroid.otf);
 }
 .login{
     font-family: 'Android' !important;
