--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ main h1{
 h2 {
     font-family: 'Android';
     color: green;
+    text-indent: 10px;
 }
 
 h3 {
@@ -66,7 +67,9 @@ a {
     color: green;
     text-decoration: none;
 }
-
+h1 > a {
+    background-color: rgba(6, 228, 6, 0.411);
+}
 img {
     width: 100%;
     display: block;
@@ -105,10 +108,6 @@ footer > p {
 }
 
 
-#h1main {
-    color: green;
-    background-image: linear-gradient(to right, rgba(74, 230, 74, 0.637), white);
-}
 
 div.video {
     background-color: rgb(3, 70, 3);
@@ -131,6 +130,10 @@ div.video > iframe {
     text-align: center;
 }
 
+#h1main {
+    color: rgb(3, 105, 3);
+    
+}
 .segundot {
     background-image: linear-gradient(to right, rgba(74, 230, 74, 0.637), white);
 }
